--- a/package.json
+++ b/package.json
@@ -13,21 +13,35 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
+    "@nestjs/schedule": "^4.0.1",
     "@quasar/extras": "^1.16.4",
-    "quasar": "^2.6.0",
+    "@vueuse/firebase": "^10.9.0",
+    "axios": "^1.2.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "express": "^4.19.2",
+    "firebase": "^10.10.0",
+    "pinia": "^2.0.11",
+    "quasar": "^2.15.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "sql-wasm": "^1.1.4",
+    "sql.js": "^1.10.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.1.0",
+    "xor-crypt": "^1.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
     "@quasar/app-vite": "^1.3.0",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
